Bug 1288600 - reject promise with NotFoundError while no device, and NotAllowedError while canceled by user. r=smaug.

MozReview-Commit-ID: ArQHhdIpQjg